--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@
 }
 
 :root {
-  --c-bg-primary: rgb(10, 124, 139);
-  --c-bg-primaryDark: rgb(3 87 98);
+  --c-bg-primary: rgb(10, 55, 139);
+  --c-bg-primaryDark: rgb(10, 55, 139);
 
   --c-bg-secondary: hsla(200, 11%, 89%, 0.369);
   --c-secondarylight: #f5f5f5;
